--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <select name="currency" id="currency" required>
           <option value="" disabled selected hidden>Selecione a moeda</option>
           <option value="USD">Dólar Americano</option>
+          <option value="CAD">Dólar Canadense</option>
           <option value="EUR">Euro</option>
           <option value="GBP">Libra Esterlina</option>
         </select>
@@ -36,9 +37,11 @@
       </form>
 
       <footer>
-        <span id="description">US$ 1 = R$ 4,86</span>
+        <span id="description">US$ 1 = R$ 5,87</span>
         <h1 id="result">486,00 Reais</h1>
       </footer>
     </main>
+
+    <script src="scripts.js"></script>
   </body>
 </html>
